[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ViLLM-Eval"
version = "0.0.1"
authors = [
  { name="Sang T. Truong", email="sttruong@stanford.edu" },
  { name="Duc Q. Nguyen", email="nqduc@hcmut.edu.vn" },
  { name="Dong D. Le", email="dong.le0110@hcmut.edu.vn" },
  { name="Toan D. V. Nguyen", email="ndvtoan.sdh20@hcmut.edu.vn" },
  { name="Nhi N. Truong", email="nntruong2601@gmail.com" },
  { name="Tho Quan", email="qttho@hcmut.edu.vn" },
  { name="Sanmi Koyejo", email="sanmi@cs.stanford.edu" },
]
description = "A Python package for evaluating Vietnamese LLMs"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: Apache 2.0 License",
    "Operating System :: OS Independent",
]
license = {text = "Apache 2.0 License"}
dependencies = [
    "accelerate>=0.21.0",
    "peft>=0.4.0",
    "bitsandbytes>=0.40.2",
    "transformers>=4.31.0",
    "trl>=0.4.7",
    "xformers",
    "torch>=2.0.1",
    "scipy",
    "tiktoken",
    "tqdm",
    "python-dotenv",
    "openai==0.27.8",
    "backoff",
    "uncertainty-calibration",
    "jiwer",
    "underthesea",
    "sentencepiece",
    "bert-score",
    "summ-eval",
    "rouge-score",
    "hLepor",
    "nptyping",
    "ranx",
    "evaluate",
    "scikit-learn",
    "python-Levenshtein",
]

[project.urls]
Homepage = "https://github.com/koyejo-lab/villm-eval"
Issues = "https://github.com/koyejo-lab/villm-eval/issues"

[tool.poetry.dependencies]
python = ">=3.8,<=3.10"
accelerate = "^0.21.0"
peft = "^0.4.0"
bitsandbytes = "^0.40.2"
transformers = "^4.31.0"
trl = "^0.4.7"
xformers = "*"
torch = [
    { version = "^2.0.1", markers="sys_platform == 'win32'", source = "torch_cuda118" },
    { version = "^2.0.1", markers="sys_platform != 'win32'", source = "pypi" },
]
scipy = "*"
tiktoken = "*"
tqdm = "latest"
python-dotenv = "latest"
openai = "^0.27.8"
backoff = "latest"


[[tool.poetry.source]]
name = "torch_cuda118"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[tool.hatch.build.targets.sdist]
include = [
  "pkg/*.py",
  "/tests",
]
exclude = [
  "*.json",
  "pkg/_compat.py",
]

[tool.hatch.build.targets.wheel]
packages = ["src/vieval"]
artifacts = [
  "*.so",
  "*.dll",
  "!/foo/*.so",
]