[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ViLLM-Eval"
version = "0.0.1"
authors = [
  { name = "Sang T. Truong", email = "sttruong@stanford.edu" },
  { name = "Duc Q. Nguyen", email = "nqduc@hcmut.edu.vn" },
  { name = "Dong D. Le", email = "dong.le0110@hcmut.edu.vn" },
  { name = "Toan D. V. Nguyen", email = "ndvtoan.sdh20@hcmut.edu.vn" },
  { name = "Nhi N. Truong", email = "nntruong2601@gmail.com" },
  { name = "Tho Quan", email = "qttho@hcmut.edu.vn" },
  { name = "Sanmi Koyejo", email = "sanmi@cs.stanford.edu" },
]
description = "A Python package for evaluating Vietnamese LLMs"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
]
license = { text = "Apache 2.0 License" }

dependencies = [
  "accelerate>=0.30.1",
  "peft>=0.11.1",
  "bitsandbytes>=0.40.2",
  "transformers>=4.31.0",
  "ranx",
  "trl>=0.9.4",
  "xformers==0.0.12", 
  "scipy>=1.10.0", 
  "tiktoken",
  "tqdm>=4.65.0",
  "python-dotenv>=0.21.0",
  "openai>=1.14.3",
  "backoff>=2.2.1",
  "uncertainty-calibration",
  "jiwer>=2.6.0",
  "underthesea>=2.4.1",
  "sentencepiece>=0.1.97",
  "nptyping>=1.4.0",
  "evaluate>=0.4.0",
  "scikit-learn>=1.2.2",
  "python-Levenshtein>=0.20.9",
  "bert-score==0.3.13",
  "rouge-score==0.1.2",
  "hLepor==0.0.4",
  "spacy>=3.5.0",
  "cython>=0.29.33",
  "stanza>=1.4.2",
  "moverscore>=0.0.19",
  "pyemd==0.5.1",
  "sacremoses>=0.0.53",
  "pytorch-pretrained-bert>=0.6.2",
  "google-generativeai>=0.3.2"
]

[project.urls]
Homepage = "https://github.com/koyejo-lab/villm-eval"
Issues = "https://github.com/koyejo-lab/villm-eval/issues"

[project.scripts]
vieval = "vieval.cli:main"

[tool.hatch.build.targets.sdist]
include = [
  "pkg/*.py",
  "tests", 
]
exclude = [
  "*.json",
  "pkg/_compat.py",
]

[tool.hatch.build.targets.wheel]
packages = ["src/vieval"]
artifacts = [
  "*.so",
  "*.dll",
  "!/foo/*.so", 
]